--- a/debian-slim/Dockerfile
+++ b/debian-slim/Dockerfile
@@ -7,8 +7,8 @@ RUN echo "dash dash/sh boolean false" | debconf-set-selections \
 # change the apt source to mirror site
 RUN sed -ie 's|http://deb|http://ftp.jp|g' /etc/apt/sources.list
 
-RUN apt update && \
-    DEBIAN_FRONTEND=noninteractive apt install -y --no-install-recommends \
+RUN apt update \
+    && DEBIAN_FRONTEND=noninteractive apt install -y --no-install-recommends \
         build-essential \
         autogen \
         autoconf \
@@ -42,65 +42,69 @@ RUN mkdir -p ${RX_DL} ${RX_SRC} ${RX_BUILD}
 #GMP
 ARG GMP_URL=${GCC_MIRROR}/infrastructure/gmp-${GMP_VER}.tar.bz2
 RUN mkdir -p ${RX_SRC}/gmp ${RX_BUILD}/gmp \
-    && wget -P ${RX_DL} ${GMP_URL} \
+    && wget -q -P ${RX_DL} ${GMP_URL} \
     && tar xfj ${RX_DL}/gmp-${GMP_VER}.tar.bz2 -C ${RX_SRC}/gmp --strip-components=1 \
     && rm -f ${RX_DL}/gmp-${GMP_VER}.tar.bz2 \
     && cd ${RX_BUILD}/gmp \
     && ${RX_SRC}/gmp/configure \
+        --silent \
         --prefix=${RX_PREFIX} \
         --disable-shared \
         --enable-cxx \
-    && make -j \
-    && make install \
+    && make -s -j \
+    && make -s install \
     && cd / \
     && rm -rf ${RX_SRC}/gmp ${RX_BUILD}/gmp
 
 #MPFR
 ARG MPFR_URL=${GCC_MIRROR}/infrastructure/mpfr-${MPFR_VER}.tar.bz2
 RUN mkdir -p ${RX_SRC}/mpfr ${RX_BUILD}/mpfr \
-    && wget -P ${RX_DL} ${MPFR_URL} \
+    && wget -q -P ${RX_DL} ${MPFR_URL} \
     && tar xfj ${RX_DL}/mpfr-${MPFR_VER}.tar.bz2 -C ${RX_SRC}/mpfr --strip-components=1 \
     && rm -f ${RX_DL}/mpfr-${MPFR_VER}.tar.bz2 \
     && cd ${RX_BUILD}/mpfr \
     && ${RX_SRC}/mpfr/configure \
+        --silent \
         --prefix=${RX_PREFIX} \
         --disable-shared \
         --with-gmp=${RX_PREFIX} \
-    && make -j all \
-    && make install \
+    && make -s -j all \
+    && make -s install \
     && cd / \
     && rm -rf ${RX_SRC}/mpfr ${RX_BUILD}/mpfr
 
 #MPC
 ARG MPC_URL=${GCC_MIRROR}/infrastructure/mpc-${MPC_VER}.tar.gz
 RUN mkdir -p ${RX_SRC}/mpc ${RX_BUILD}/mpc \
-    && wget -P ${RX_DL} ${MPC_URL} \
+    && wget -q -P ${RX_DL} ${MPC_URL} \
     && tar xfz ${RX_DL}/mpc-${MPC_VER}.tar.gz -C ${RX_SRC}/mpc --strip-components=1 \
     && rm -f ${RX_DL}/mpc-${MPC_VER}.tar.gz \
     && cd ${RX_BUILD}/mpc \
     && ${RX_SRC}/mpc/configure \
+        --silent \
         --prefix=${RX_PREFIX} \
         --disable-shared \
         --with-gmp=${RX_PREFIX} \
         --with-mpfr=${RX_PREFIX} \
-    && make -j \
-    && make install \
+    && make -s -j \
+    && make -s install \
     && cd / \
     && rm -rf ${RX_SRC}/mpc ${RX_BUILD}/mpc
 
 #ISL
 ARG ISL_URL=${GCC_MIRROR}/infrastructure/isl-${ISL_VER}.tar.bz2
 RUN mkdir -p ${RX_SRC}/isl ${RX_BUILD}/isl \
-    && wget -P ${RX_DL} ${ISL_URL} \
+    && wget -q -P ${RX_DL} ${ISL_URL} \
     && tar xfj ${RX_DL}/isl-${ISL_VER}.tar.bz2 -C ${RX_SRC}/isl --strip-components=1 \
     && rm -f ${RX_DL}/isl-${ISL_VER}.tar.bz2 \
     && cd ${RX_BUILD}/isl \
     && ${RX_SRC}/isl/configure \
+        --silent \
         --prefix=${RX_PREFIX} \
         --disable-shared \
         --with-gmp-prefix=${RX_PREFIX} \
-    && make -j \
-    && make install \
+    && make -s -j \
+    && make -s install \
     && cd / \
     && rm -rf ${RX_SRC}/isl ${RX_BUILD}/isl
 
@@ -110,11 +114,12 @@ ARG RX_ELF_PREFIX=/usr/local/rx-elf
 ARG RX_BINUTILS_NAME=binutils_rx_${BINUTILS_VER}_2020q4
 ARG RX_BINUTILS_URL=https://llvm-gcc-renesas.com/downloads/d.php?f=rx/binutils/${GCC_VER}.202004-gnurx/${RX_BINUTILS_NAME}.zip
 RUN mkdir -p ${RX_BUILD}/binutils \
-    && wget -P ${RX_DL} --content-disposition ${RX_BINUTILS_URL} \
-    && unzip ${RX_DL}/${RX_BINUTILS_NAME} -d ${RX_SRC} \
+    && wget -q -P ${RX_DL} --content-disposition ${RX_BINUTILS_URL} \
+    && unzip -q ${RX_DL}/${RX_BINUTILS_NAME} -d ${RX_SRC} \
     && cd ${RX_BUILD}/binutils \
     && chmod -R +x ${RX_SRC}/${RX_BINUTILS_NAME} \
     && ${RX_SRC}/${RX_BINUTILS_NAME}/configure \
+        --silent \
         --prefix=${RX_ELF_PREFIX} \
         --target=rx-elf \
         --with-sysroot=${RX_ELF_PREFIX} \
@@ -123,8 +128,8 @@ RUN mkdir -p ${RX_BUILD}/binutils \
         --enable-plugins \
         --disable-nls \
         --disable-werror \
-    && make \
-    && make install-strip \
+    && make -s \
+    && make -s install-strip \
     && cd / \
     && rm -rf ${RX_SRC}/${RX_BINUTILS_NAME} ${RX_BUILD}/binutils ${RX_DL}/${RX_BINUTILS_NAME}.zip
 
@@ -134,11 +139,12 @@ ENV PATH=${RX_ELF_PREFIX}/bin:${PATH}
 ARG RX_GCC_NAME=gcc_rx_${GCC_VER}_2020q4
 ARG RX_GCC_URL=https://llvm-gcc-renesas.com/downloads/d.php?f=rx/gcc/${GCC_VER}.202004-gnurx/${RX_GCC_NAME}.zip
 RUN mkdir -p ${RX_BUILD}/gcc \
-    && wget -P ${RX_DL} --content-disposition ${RX_GCC_URL} \
-    && unzip ${RX_DL}/${RX_GCC_NAME} -d ${RX_SRC} \
+    && wget -q -P ${RX_DL} --content-disposition ${RX_GCC_URL} \
+    && unzip -q ${RX_DL}/${RX_GCC_NAME} -d ${RX_SRC} \
     && cd ${RX_BUILD}/gcc \
     && chmod -R +x ${RX_SRC}/${RX_GCC_NAME} \
     && ${RX_SRC}/${RX_GCC_NAME}/configure \
+        --silent \
         --target=rx-elf \
         --prefix=${RX_ELF_PREFIX} \
         --with-gmp=${RX_PREFIX} \
@@ -163,7 +169,8 @@ RUN mkdir -p ${RX_BUILD}/gcc \
         --disable-libvtv \
         --disable-libstdcxx \
         --enable-languages=c \
-    && make -j all-gcc && make install-gcc \
+    && make -s -j all-gcc \
+    && make -s install-gcc \
     && cd / \
     && rm -rf ${RX_BUILD}/gcc ${RX_DL}/${RX_GCC_NAME}.zip
 
@@ -172,11 +179,12 @@ ARG RX_NEWLIB_URL=https://llvm-gcc-renesas.com/downloads/d.php?f=rx/newlib/${GCC
 
 # newlib
 RUN mkdir ${RX_BUILD}/newlib \
-    && wget -P ${RX_DL} --content-disposition ${RX_NEWLIB_URL} \
-    && unzip ${RX_DL}/${RX_NEWLIB_NAME} -d ${RX_SRC} \
+    && wget -q -P ${RX_DL} --content-disposition ${RX_NEWLIB_URL} \
+    && unzip -q ${RX_DL}/${RX_NEWLIB_NAME} -d ${RX_SRC} \
     && cd ${RX_BUILD}/newlib \
     && chmod -R +x ${RX_SRC}/${RX_NEWLIB_NAME} \
     && ${RX_SRC}/${RX_NEWLIB_NAME}/configure \
+        --silent \
         --target=rx-elf \
         --prefix=${RX_ELF_PREFIX} \
         --with-target-system-zlib \
@@ -194,8 +202,8 @@ RUN mkdir ${RX_BUILD}/newlib \
         --disable-newlib-fvwrite-in-streamio \
         --disable-nls \
         --disable-shared \
-    && make -j && make install \
-    && find /usr/local/rx-elf/lib -name "*.o" -or -name "*.a" -exec rx-elf-strip --strip-unneeded {} \; \
+    && make -s -j \
+    && make -s install \
     && rm -rf ${RX_BUILD}/newlib ${RX_DL}/${RX_NEWLIB_NAME}.zip
 
 RUN ln ${RX_ELF_PREFIX}/rx-elf/lib/libc.a ${RX_ELF_PREFIX}/rx-elf/lib/libc_nano.a \
@@ -206,6 +214,7 @@ RUN ln ${RX_ELF_PREFIX}/rx-elf/lib/libc.a ${RX_ELF_PREFIX}/rx-elf/lib/libc_nano.
 RUN mkdir -p ${RX_BUILD}/gcc \
     && cd ${RX_BUILD}/gcc \
     && ${RX_SRC}/${RX_GCC_NAME}/configure \
+        --silent \
         --target=rx-elf \
         --prefix=${RX_ELF_PREFIX} \
         --with-gmp=${RX_PREFIX} \
@@ -227,9 +236,12 @@ RUN mkdir -p ${RX_BUILD}/gcc \
         --disable-libgomp \
         --disable-libstdcxx-pch \
         --enable-languages=c,c++ \
-    && make -j && make install-strip \
+    && make -s -j \
+    && make -s install-strip \
     && cd / \
     && rm -rf ${RX_BUILD}/gcc
+
+RUN find /usr/local/rx-elf/lib -name "*.o" -or -name "*.a" -exec rx-elf-strip --strip-unneeded {} \;
 
 FROM debian:stable-slim
 RUN apt update && \
